# opengles_android

./: .clang-format  .classpath  .gitignore  .project  .rgignore  AndroidManifest.xml  Makefile  README.md  app.apk  compile_commands.json  make.sh  settings.gradle
app/: .project  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello.c  player.c
apps/3d/: 3d.cpp  AndroidManifest.xml  Makefile  penger.h
apps/activity/: AndroidManifest.xml  MainActivity.java  Makefile  engine.c
apps/audio/: AndroidManifest.xml  Makefile  audio.c
apps/camera/: AndroidManifest.xml  Makefile  camera.c
apps/cube/: AndroidManifest.xml  Makefile  cube.h  main.cpp
apps/game/: AndroidManifest.xml  MainActivity.java  Makefile  game.c
apps/game/assets/: frag.glsl  shaders.glsl  vert.glsl
apps/grid/: AndroidManifest.xml  Makefile  grid.cpp
apps/hls/: AndroidManifest.xml  App.java  Makefile
apps/java/: AndroidManifest.xml  App.java  MainActivity.java  Makefile
apps/list/: AndroidManifest.xml  Makefile  list.c  list.cpp
apps/list/assets/: frag.glsl  vert.glsl
apps/native/: Makefile
apps/stream/: AndroidManifest.xml  Makefile  stream.c
apps/triangle/: AndroidManifest.xml  Makefile  triangle.c
apps/video/: AndroidManifest.xml  Makefile  video.c  video.cpp
gradle/: libs.versions.toml
include/libavutil/: ffversion.h
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
resources/values/: styles.xml
src/: MainActivity.java  audio.c  engine.c  list.c  native.c  texture.c  triangle.c  triangle_uv.c  uv.c  video.c
(+12 files in other folders)
